Creat Login And register files

--- a/GoldenWorkSys/Areas/Admin/Views/Contract/List.cshtml
+++ b/GoldenWorkSys/Areas/Admin/Views/Contract/List.cshtml
@@ -7,6 +7,8 @@
 <div class="card-body">
     <h4 class="card-title">Lidt Of Contract</h4>
     <a asp-area="admin" asp-controller="contract" asp-action="Edit"  type="button" value="Edit" class="btn btn-gradient-primary btn-rounded btn-fw" >New</a>
+    <a asp-area="admin" asp-controller="Users" asp-action="Login"  type="button" value="Login" class="btn btn-gradient-primary btn-rounded btn-fw" >Login</a>
+    <a asp-area="admin" asp-controller="Users" asp-action="Register"  type="button" value="register" class="btn btn-gradient-primary btn-rounded btn-fw" >register</a>
     <div class="row">
         <div class="table-sorter-wrapper col-lg-12 table-responsive">
             <table id="sortable-table-2" class="table table-striped">
