--- a/GoldenWorkSys/Areas/Admin/Views/Users/Register.cshtml
+++ b/GoldenWorkSys/Areas/Admin/Views/Users/Register.cshtml
@@ -1,37 +1,41 @@
-﻿<div class="auth-form-light text-left p-5">
+﻿@model UsersModel
+<div class="auth-form-light text-left p-5">
                 <div class="brand-logo">
                   <img src="../../../assets/images/logo.svg">
                 </div>
                 <h4>New here?</h4>
                 <h6 class="font-weight-light">Signing up is easy. It only takes a few steps</h6>
-                <form class="pt-3">
+                <form class="pt-3" method="post"
+                asp-controller="Users" asp-action="Register">
                   <div class="form-group">
-                    <input type="text" class="form-control form-control-lg" id="exampleInputUsername1" placeholder="Username">
+                      <div asp-validation-summary="All">
+
+                      </div>
+                    <input type="text" class="form-control form-control-lg"  placeholder="First Name"
+                        asp-for="@Model.FirstName" maxlength="100">
+                    <span  asp-validation-for="@Model.FirstName" class="text-danger"></span>
                   </div>
+
                   <div class="form-group">
-                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email">
+                    <input type="text" class="form-control form-control-lg"  placeholder="Last Name"
+                        asp-for="@Model.LastName" maxlength="100">
+                    <span  asp-validation-for="@Model.LastName" class="text-danger"></span>
                   </div>
+
                   <div class="form-group">
-                    <select class="form-control form-control-lg" id="exampleFormControlSelect2">
-                      <option>Country</option>
-                      <option>United States of America</option>
-                      <option>United Kingdom</option>
-                      <option>India</option>
-                      <option>Germany</option>
-                      <option>Argentina</option>
-                    </select>
+                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email"
+                        asp-for="@Model.Email" maxlength="100">
+                    <span  asp-validation-for="@Model.Email" class="text-danger"></span>
                   </div>
+                  
                   <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password"
+                        asp-for="@Model.Password" maxlength="100">
+                    <span  asp-validation-for="@Model.Password" class="text-danger"></span>
                   </div>
-                  <div class="mb-4">
-                    <div class="form-check">
-                      <label class="form-check-label text-muted">
-                        <input type="checkbox" class="form-check-input"> I agree to all Terms &amp; Conditions <i class="input-helper"></i></label>
-                    </div>
-                  </div>
+                  
                   <div class="mt-3">
-                    <a class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">SIGN UP</a>
+                    <button type="submit"class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn">SIGN UP</button>
                   </div>
                   <div class="text-center mt-4 font-weight-light"> Already have an account? <a href="login.html" class="text-primary">Login</a>
                   </div>
