--- a/GoldenWorkSys/Areas/Admin/Views/Users/Login.cshtml
+++ b/GoldenWorkSys/Areas/Admin/Views/Users/Login.cshtml
@@ -1,18 +1,32 @@
-﻿<div class="auth-form-light text-left p-5">
+﻿@model UsersModel
+<div class="auth-form-light text-left p-5">
                 <div class="brand-logo">
                   <img src="../../../assets/images/logo.svg">
                 </div>
                 <h4>Hello! let's get started</h4>
                 <h6 class="font-weight-light">Sign in to continue.</h6>
-                <form class="pt-3">
-                  <div class="form-group">
-                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Username">
+                <form class="pt-3" method="post"
+                asp-controller="Users" asp-action="Login">
+                  
+                <div class="form-group">
+
+                    <div asp-validation-summary="All">
+
+                      </div>
+
+                    <input type="email" class="form-control form-control-lg" id="exampleInputEmail1" placeholder="Email"
+                        asp-for="@Model.Email" maxlength="100">
+                    <span  asp-validation-for="@Model.Email" class="text-danger"></span>
                   </div>
-                  <div class="form-group">
-                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password">
+                 
+                   <div class="form-group">
+                    <input type="password" class="form-control form-control-lg" id="exampleInputPassword1" placeholder="Password"
+                        asp-for="@Model.Password" maxlength="100">
+                    <span  asp-validation-for="@Model.Password" class="text-danger"></span>
                   </div>
+
                   <div class="mt-3">
-                    <a class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn" href="../../index.html">SIGN IN</a>
+                    <button type="submit" class="btn btn-block btn-gradient-primary btn-lg font-weight-medium auth-form-btn">SIGN IN</button>
                   </div>
                   <div class="my-2 d-flex justify-content-between align-items-center">
                     <div class="form-check">
